@@ -296,3 +296,4 @@
     - Added RES_get_text and RES_set_text functions to EGA.
 - v.5.7.8 (2023-XX-YY)
     - Improved Portuguese (Brazilian) translation.
+    - Relaxed font selection requirements.
