@@ -640,3 +640,4 @@
     - RES_get_text と RES_set_text 関数をEGAに追加。
 - v.5.7.8 (2023-XX-YY)
     - ポルトガル語（ブラジル）の翻訳を改良。
+    - フォント選択条件を緩和。
